# unemployed-morons

./: .gitignore  CMakeLists.txt  README.md  config.json  testconfig.json  testlist
src/: Agent.cpp  Agent.h  AgentInterface.cpp  AgentInterface.h  AgentRequest.cpp  AgentRequest.h  Company.cpp  Company.h  Configuration.cpp  Configuration.h  DerivedMessage.cpp  DerivedMessage.h  GoOutOfQueueMessage.cpp  GoOutOfQueueMessage.h  Message.cpp  Message.h  Messanger.cpp  Messanger.h  Messenger.cpp  Messenger.h  Monitor.cpp  Monitor.h  Packet.cpp  Packet.h  ReplyCompanyMessage.cpp  ReplyCompanyMessage.h  RequestCompanyMessage.cpp  RequestCompanyMessage.h  RequestsQueue.cpp  RequestsQueue.h  Serializer.cpp  Serializer.h  main.cpp
src/messages/: BreakCompanyMessage.cpp  BreakCompanyMessage.h  DerivedMessage.cpp  DerivedMessage.h  GoOutOfQueueMessage.cpp  GoOutOfQueueMessage.h  GoToSleepMessage.cpp  GoToSleepMessage.h  Message.cpp  Message.h  RepairCompanyMessage.cpp  RepairCompanyMessage.h  ReplyBreakCompanyMessage.cpp  ReplyBreakCompanyMessage.h  ReplyCompanyMessage.cpp  ReplyCompanyMessage.h  RequestBreakCompanyMessage.cpp  RequestBreakCompanyMessage.h  RequestCompanyMessage.h  UpdateRequestMessage.cpp  UpdateRequestMessage.h  WakeUpMessage.cpp  WakeUpMessage.h
tests/: testAgent.cpp  testAutoMessaging.cpp  testCompany.cpp  testMultithreading.cpp  testRequestsQueue.cpp  tests.cpp
